--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
   },
   "scripts": {
     "start": "env-cmd -f .env.development react-scripts start",
+    "start:mono":"env-cmd -f .env.mono react-scripts start",
     "start:production": "env-cmd -f .env.production react-scripts start",
     "build": "env-cmd -f .env.development react-scripts build",
+    "build:mono": "env-cmd -f .env.mono react-scripts build",
     "build:production": "env-cmd -f .env.production react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
