--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.13.7",
     "@mui/x-data-grid": "^6.9.2",
     "@testing-library/jest-dom": "^5.16.5",
@@ -22,14 +23,14 @@
   },
   "scripts": {
     "start": "env-cmd -f .env.development react-scripts start",
-    "start:mono":"env-cmd -f .env.mono react-scripts start",
+    "start:mono": "env-cmd -f .env.mono react-scripts start",
     "start:production": "env-cmd -f .env.production react-scripts start",
     "build": "env-cmd -f .env.development react-scripts build",
     "build:mono": "env-cmd -f .env.mono react-scripts build",
     "build:production": "env-cmd -f .env.production react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-},
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
