--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "process": "^0.11.10",
     "react": "^18.2.0",
+    "react-avatar-editor": "^14.0.0-beta.5",
     "react-data-grid": "^7.0.0-beta.34",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
